--- a/front/src/app/components/agreements/agreements.component.html
+++ b/front/src/app/components/agreements/agreements.component.html
@@ -12,9 +12,9 @@
         <div class="col">
             <a routerLink="/services/credits">
                 <div class="card h-100 shadow text-center">
-                    <i class="bi bi-house-heart-fill"></i>
+                    <i class="bi bi-car-front-fill"></i>
                     <div class="card-body pt-0">
-                        <h5 class="card-title">Crédito para Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                        <h5 class="card-title">Vehículos</h5><i class="bi bi-arrow-right-square-fill"></i>
                     </div>
                 </div>
             </a>
@@ -22,9 +22,9 @@
         <div class="col">
             <a routerLink="/services/credits">
                 <div class="card h-100 shadow text-center">
-                    <i class="bi bi-house-heart-fill"></i>
+                    <i class="bi bi-sunglasses"></i>
                     <div class="card-body pt-0">
-                        <h5 class="card-title">Crédito para Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                        <h5 class="card-title">Ópticas, Lentes y Monturas</h5><i class="bi bi-arrow-right-square-fill"></i>
                     </div>
                 </div>
             </a>
@@ -32,9 +32,9 @@
         <div class="col">
             <a routerLink="/services/credits">
                 <div class="card h-100 shadow text-center">
-                    <i class="bi bi-house-heart-fill"></i>
+                    <i class="bi bi-house-up-fill"></i>
                     <div class="card-body pt-0">
-                        <h5 class="card-title">Crédito para Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                        <h5 class="card-title">Hogar y Tecnología</h5><i class="bi bi-arrow-right-square-fill"></i>
                     </div>
                 </div>
             </a>
@@ -42,9 +42,9 @@
         <div class="col">
             <a routerLink="/services/credits">
                 <div class="card h-100 shadow text-center">
-                    <i class="bi bi-house-heart-fill"></i>
+                    <i class="bi bi-film"></i>
                     <div class="card-body pt-0">
-                        <h5 class="card-title">Crédito para Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                        <h5 class="card-title">Entretenimiento</h5><i class="bi bi-arrow-right-square-fill"></i>
                     </div>
                 </div>
             </a>
@@ -52,9 +52,9 @@
         <div class="col">
             <a routerLink="/services/credits">
                 <div class="card h-100 shadow text-center">
-                    <i class="bi bi-house-heart-fill"></i>
+                    <i class="bi bi-shop"></i>
                     <div class="card-body pt-0">
-                        <h5 class="card-title">Crédito para Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                        <h5 class="card-title">Canasta Familiar</h5><i class="bi bi-arrow-right-square-fill"></i>
                     </div>
                 </div>
             </a>
