--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -34,9 +34,26 @@
                     <a class="nav-link btn btn-outline-warning" (click)="closeMenu()" routerLink="/login">Iniciar Sesión</a>
                 </li>
                 <li class="nav-item" *ngIf="isAuthenticated">
-                    <a class="nav-link btn btn-outline-warning" (click)="logout()" (click)="closeMenu()">Cerrar Sesión</a>
+                    <a class="nav-link btn btn-outline-warning" (click)="openLogoutModal()">Cerrar Sesión</a>
                 </li>
             </div>
         </div>
     </div>
 </nav>
+<div *ngIf="showLogoutModal" class="modal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Confirmar Cierre de Sesión</h5>
+                <button type="button" class="btn-close" aria-label="Close" (click)="closeLogoutModal()"></button>
+            </div>
+            <div class="modal-body">
+                <p>¿Está seguro de que desea cerrar sesión?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" (click)="closeLogoutModal()">Cancelar</button>
+                <button type="button" class="btn btn-danger" (click)="confirmLogout()">Cerrar Sesión</button>
+            </div>
+        </div>
+    </div>
+</div>
