update saving services
saving services with cards and buttons

--- a/front/src/app/components/saving-service/saving-service.component.html
+++ b/front/src/app/components/saving-service/saving-service.component.html
@@ -1,1 +1,64 @@
-<p>saving-service works!</p>
+<div class="container">
+    <h1 class="text-center fw-bold mt-3">Servicios de ahorro</h1>
+    <p class="subtitle">El Ahorro Voluntario es un servicio que permite a los asociados acumular un monto
+        determinado mediante descuentos mensuales, con el destino que el asociado elija.</p>
+
+    <h2 class="fw-bold mt-3">Nuestras lineas de ahorro</h2>
+
+    <div class="row align-items-start">
+        <div class="col-3 align-self-center">
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button">AHORRO VIVIENDA</button>
+                <button class="btn btn-primary" type="button">AHORRO NAVIDEÑO</button>
+                <button class="btn btn-primary" type="button">AHORRO VACACIONAL</button>
+                <button class="btn btn-primary" type="button">AHORRO EXTRAORDINARIO</button>
+            </div>
+        </div>
+        <div class="col-9 align-self-center">
+            One of three columns
+        </div>
+    </div>
+
+    <!-- REQUISITOS -->
+    <h2 class="fw-bold mt-3">Requisitos para el ahorro voluntario en el fondo</h2>
+    <p class="subtitle">Para iniciar el ahorro voluntario en el Fondo, los asociados deben cumplir con los siguientes
+        requisitos:</p>
+    <div class="row">
+    
+        <div class="col-lg-6 mt-3">
+            <div class="card shadow">
+                <div class="card-header fw-bold text-center h3">
+                    Requisitos
+                </div>
+                <div class="card-body">
+                    <ul class="list-group list-group-flush card-text text-start">
+                        <li class="list-group-item d-flex align-items-center">
+                            <i class="bi bi-person-check-fill me-3"></i>
+                            <span>Ser admitido como asociado de FEMSEAPTO.</span>
+                        </li>
+                        <li class="list-group-item d-flex align-items-center">
+                            <i class="bi bi-clipboard-check-fill me-3"></i>
+                            <span>Completar correctamente la solicitud de ahorro voluntario y obtener la aprobación 
+                                de la Gerencia del Fondo.</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+    
+        </div>
+        <div class="col-lg-6 mt-3">
+            <div class="card shadow">
+                <div class="card-header fw-bold text-center h3">
+                    Plazo
+                </div>
+                <div class="card-body">
+                    <ul class="list-group list-group-flush card-text text-start">
+                        <li class="list-group-item"> Los asociados pueden realizar 
+                            sus ahorros durante el tiempo que deseen, siempre y cuando cuenten con capacidad de endeudamiento. 
+                            Cada asociado tiene un límite en el monto de su ahorro, determinado por su capacidad de descuento 
+                            de nómina.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
