--- a/front/src/app/components/user/components/user-info/user-info.component.css
+++ b/front/src/app/components/user/components/user-info/user-info.component.css
@@ -1,20 +1,20 @@
 .title-color {
-    color: #00823d;
-  }
+  color: #00823d;
+  font-weight: bold;
+}
   
-  .card {
-    margin: 0 auto;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    font-weight: bold;
-  }
-  
-  input {
-    border-radius: 5px;
-  }
-  
+/*.card {
+  margin: 0 auto;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  font-weight: bold;
+}
+
+input {
+  border-radius: 5px;
+}*/
