--- a/front/src/app/components/saving-service/saving-service.component.html
+++ b/front/src/app/components/saving-service/saving-service.component.html
@@ -26,41 +26,48 @@
         </div>
         <div class="col-12 col-lg-8 align-self-center mt-3">
             <div class="card shadow tipos-ahorro">
-            <div *ngIf="selectedSavingLine === 'AHORRO VIVIENDA'" class="saving-line">
-                <img src="../../../assets/confianza.jpg" alt="Ahorro Vivienda" class="img-fluid">
-                <h3>AHORRO VIVIENDA</h3>
-                <h5>Esta línea de ahorro está especialmente destinada para aquellos asociados que desean ahorrar para la compra de vivienda o para realizar mejoras en su hogar.</h5>
-                <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                    <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i class="bi bi-eye icon"></i>Ver más</button>
+                <div *ngIf="selectedSavingLine === 'AHORRO VIVIENDA'" class="saving-line">
+                    <img src="../../../assets/confianza.jpg" alt="Ahorro Vivienda" class="img-fluid">
+                    <h3>AHORRO VIVIENDA</h3>
+                    <h5>Esta línea de ahorro está especialmente destinada para aquellos asociados que desean ahorrar para la
+                        compra de vivienda o para realizar mejoras en su hogar.</h5>
+                    <div class="d-grid gap-2 col-6 mx-auto mb-3">
+                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i
+                                class="bi bi-eye icon"></i>Ver más</button>
+                    </div>
                 </div>
-            </div>
-            <div *ngIf="selectedSavingLine === 'AHORRO NAVIDEÑO'" class="saving-line">
-                <img src="../../../assets/confianza.jpg" alt="Ahorro Navideño" class="img-fluid">
-                <h3>AHORRO NAVIDEÑO</h3>
-                <h5>El Ahorro Navideño está pensado para ayudar a los asociados a enfrentar los gastos típicos de la temporada decembrina.</h5>
-                <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                    <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i class="bi bi-eye icon"></i>Ver más</button>
+                <div *ngIf="selectedSavingLine === 'AHORRO NAVIDEÑO'" class="saving-line">
+                    <img src="../../../assets/honestidad.jpg" alt="Ahorro Navideño" class="img-fluid">
+                    <h3>AHORRO NAVIDEÑO</h3>
+                    <h5>El Ahorro Navideño está pensado para ayudar a los asociados a enfrentar los gastos típicos de la
+                        temporada decembrina.</h5>
+                    <div class="d-grid gap-2 col-6 mx-auto mb-3">
+                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i
+                                class="bi bi-eye icon"></i>Ver más</button>
+                    </div>
                 </div>
-            </div>
-            <div *ngIf="selectedSavingLine === 'AHORRO VACACIONAL'" class="saving-line">
-                <img src="../../../assets/confianza.jpg" alt="Ahorro Vacacional" class="img-fluid">
-                <h3>AHORRO VACACIONAL</h3>
-                <h5>Esta línea de ahorro te permite reservar fondos para financiar tus viajes y actividades de ocio durante las vacaciones.</h5>
-                <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                    <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i class="bi bi-eye icon"></i>Ver más</button>
+                <div *ngIf="selectedSavingLine === 'AHORRO VACACIONAL'" class="saving-line">
+                    <img src="../../../assets/confianza.jpg" alt="Ahorro Vacacional" class="img-fluid">
+                    <h3>AHORRO VACACIONAL</h3>
+                    <h5>Esta línea de ahorro te permite reservar fondos para financiar tus viajes y actividades de ocio
+                        durante las vacaciones.</h5>
+                    <div class="d-grid gap-2 col-6 mx-auto mb-3">
+                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i
+                                class="bi bi-eye icon"></i>Ver más</button>
+                    </div>
                 </div>
-            </div>
-            <div *ngIf="selectedSavingLine === 'AHORRO EXTRAORDINARIO'" class="saving-line">
-                <img src="../../../assets/confianza.jpg" alt="Ahorro Extraordinario" class="img-fluid">
-                <h3>AHORRO EXTRAORDINARIO</h3>
-                <h5>Con esta línea de ahorro, los asociados pueden estar preparados para enfrentar cualquier emergencia financiera que pueda surgir, como reparaciones en el hogar, gastos médicos o pérdida de empleo.</h5>
-                <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                    <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i class="bi bi-eye icon"></i>Ver más</button>
+                <div *ngIf="selectedSavingLine === 'AHORRO EXTRAORDINARIO'" class="saving-line">
+                    <img src="../../../assets/honestidad.jpg" alt="Ahorro Extraordinario" class="img-fluid">
+                    <h3>AHORRO EXTRAORDINARIO</h3>
+                    <h5>Con esta línea de ahorro, los asociados pueden estar preparados para enfrentar cualquier emergencia
+                        financiera que pueda surgir, como reparaciones en el hogar, gastos médicos o pérdida de empleo.</h5>
+                    <div class="d-grid gap-2 col-6 mx-auto mb-3">
+                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i
+                                class="bi bi-eye icon"></i>Ver más</button>
+                    </div>
                 </div>
             </div>
         </div>
-        </div>
-    
 
     <!-- REQUISITOS -->
     <h2 class="fw-bold mt-3 text-center">Requisitos para el ahorro voluntario en el fondo</h2>
@@ -105,5 +112,4 @@
             </div>
         </div>
     </div>
-
 </div>
