--- a/front/src/app/components/welcome/welcome.component.html
+++ b/front/src/app/components/welcome/welcome.component.html
@@ -21,11 +21,11 @@
                 <div class="card-header">
                     Servicios de ahorro
                 </div>
-                <div class="card-body">
+                <div class="card-body ">
                     <h5 class="card-title">Conoce los servicios de ahorro</h5>
-                    <a class="btn btn-primary" routerLink="/user/savings">Ver más</a>
+                    <a class="btn btn-primary me-2" routerLink="/user/savings">Solicitalo aquí</a>
+                    <a class="btn btn-primary me-2" routerLink="/user/savings">Mi historial</a>
                 </div>
-
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
